--- a/laws.html
+++ b/laws.html
@@ -322,7 +322,7 @@ div#tlogins.light {
 												</span></font>
 												
 												<span style="background-color: #FFDF19" dir="rtl">&nbsp;
-												شروط المشتركين :
+												قوانين شات ملاذ :
 												</span>
 												
 												</p><p style="text-align: right">
