--- a/zakhrafa.html
+++ b/zakhrafa.html
@@ -20,15 +20,15 @@
     window.port=1072
     window.scrollTo(0,1);
   </script>
-  <script src="file:///D|/التصاميم/2023 ملاذ/صفحات شات ملاذ/zakhrafa/jquery-1.11.1.min.js"></script>
-  <link rel="stylesheet" href="file:///D|/التصاميم/2023 ملاذ/صفحات شات ملاذ/zakhrafa/bootstrap.min.css">
-  <link rel="stylesheet" href="file:///D|/التصاميم/2023 ملاذ/صفحات شات ملاذ/zakhrafa/bootstrap-theme.min.css">
-  <script src="file:///D|/التصاميم/2023 ملاذ/صفحات شات ملاذ/zakhrafa/bootstrap.min.js"></script>
-  <script src="file:///D|/التصاميم/2023 ملاذ/صفحات شات ملاذ/zakhrafa/socket.io.2.0.3.js"></script>
-  <link rel="stylesheet" href="file:///D|/التصاميم/2023 ملاذ/صفحات شات ملاذ/zakhrafa/zakhrafa/style.css">
-  <link rel="stylesheet" href="file:///D|/التصاميم/2023 ملاذ/صفحات شات ملاذ/zakhrafa/font-awesome.min.css">
-  <script src="file:///D|/التصاميم/2023 ملاذ/صفحات شات ملاذ/zakhrafa/client.min.js"></script>
-  <script type="text/javascript" src="file:///D|/التصاميم/2023 ملاذ/صفحات شات ملاذ/zakhrafa/jscolor.js"></script>
+  <script src="jquery-1.11.1.min.js"></script>
+  <link rel="stylesheet" href="bootstrap.min.css">
+  <link rel="stylesheet" href="bootstrap-theme.min.css">
+  <script src="bootstrap.min.js"></script>
+  <script src="socket.io.2.0.3.js"></script>
+  <link rel="stylesheet" href="zakhrafa/style.css">
+  <link rel="stylesheet" href="font-awesome.min.css">
+  <script src="client.min.js"></script>
+  <script type="text/javascript" src="jscolor.js"></script>
 
 
   <style>
