--- a/img.html
+++ b/img.html
@@ -278,9 +278,9 @@ div#tlogins.light {
 	  <img src="chatmlath1.png" class="fl" style="margin-right: 2px; width:28px;">صور رمزيه لشات ملاذ <button class="btn fr btn-success fa fa-refresh" style="margin:0px;margin-top:-2px;"></button></a>
       <img src="mlath.png" class="fr" style="width:100%;margin-top: 0px;">
 			<a id="des22" style="height: 29px;width:60px;float:right;margin:-68px 2px 2px;color: #ffffff;transform:matrix(1, 0, 0, 1, -256, 39);background-color: #b5b2b2!important;" class="label label label-primary mini fl " target="_blank" href="https://chatmlath.com/">دردشة</a>
-<a id="des22" style="height: 29px;background-color: #cb92a2!important;width:60px;margin:-68px 2px 2px;float:right;color:rgb(255, 217, 0);transform:matrix(1, 0, 0, 1, -256, 7);" class="label label label-primary mini fl" target="_blank" href="https://chatmlath.com/laws.html">القوانين</a>
-<a id="des22" style="height: 29px;color: rgb(255 255 255);background-color: #b5b2b2!important;width:60px;margin:2px;transform:matrix(1, 0, 0, 1, 6, -63);" class="label label label-primary mini fl" target="_blank" href="https://chatmlath.com/img.html">الصور</a>
-<a id="des22" style="height: 29px;color: rgb(255 217 11);background-color: #cb92a2!important;width:60px;margin:2px;transform:matrix(1, 0, 0, 1, -58, -31);" class="label label label-primary mini fl" target="_blank" href="https://chatmlath.com/zakhrafa.htm">الزخرفة</a><ul class="nav  nav-tabs" style="margin-bottom:0px;background-color:white;"> 
+<a id="des22" style="height: 29px;background-color: #cb92a2!important;width:60px;margin:-68px 2px 2px;float:right;color:rgb(255, 217, 0);transform:matrix(1, 0, 0, 1, -256, 7);" class="label label label-primary mini fl" target="_blank" href="https://raw.githack.com/samidis/sami/main/laws.html">القوانين</a>
+<a id="des22" style="height: 29px;color: rgb(255 255 255);background-color: #b5b2b2!important;width:60px;margin:2px;transform:matrix(1, 0, 0, 1, 6, -63);" class="label label label-primary mini fl" target="_blank" href="https://raw.githack.com/samidis/sami/main/img.html">الصور</a>
+<a id="des22" style="height: 29px;color: rgb(255 217 11);background-color: #cb92a2!important;width:60px;margin:2px;transform:matrix(1, 0, 0, 1, -58, -31);" class="label label label-primary mini fl" target="_blank" href="https://raw.githack.com/samidis/sami/main/zakhrafa.html">الزخرفة</a><ul class="nav  nav-tabs" style="margin-bottom:0px;background-color:white;"> 
         
       </ul>
      
